Added saving and loading for rooms
- Rooms and connected rooms are in files
- They get loaded into a map from the files
- Now when saving, saves the state of the room into the file
* For example if an item is removed or placed in, the change now gets saved
- Moved saving and loading into their own classes and methods