@@ -2,10 +2,7 @@ package dev.tesch.Furniture;
 
 import dev.tesch.Items.*;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.Map;
+import java.util.*;
 
 public class Containers {
     public HashMap<Integer, Container> containersMap = new HashMap<>();
@@ -16,12 +13,14 @@ public class Containers {
         //Map<Integer, Armor> armors = new Armors().armorMap;
         //Map<Integer, Weapon> weapons = new Weapons().weaponMap;
 
+        // TODO: Change the way the inventory is lloaded in and saved to use files
+        //       as not to be hard coded
         containersMap.put(1, new Container(
                 "Chest",
                 "A run of the mill chest.",
                 "\nYou open the chest to see what's inside.",
                 true,
-                new LinkedList<>(Arrays.asList(items.get(1)))
+                new LinkedList<>(List.of(items.get(1)))
         ));
 
         containersMap.put(2, new Container(
@@ -29,7 +28,7 @@ public class Containers {
                 "Used to keep things cold.",
                 "\nYou check for something cold inside.",
                 true,
-                new LinkedList<>(Arrays.asList(consumables.get(1)))
+                new LinkedList<>(List.of(consumables.get(1)))
         ));
     }
 }
